link to hosted preview of REST API specification added to documentation; OpenAPI HTML regenerated

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
    <ul>
     <li><a href="https://github.com/dentonescu/cv-samples">cv-samples source code</a></li>
     <li><a href="null-cipher">null-cipher</a>
+    <li><a href="wifiequ/docs/api">WiFiEqu REST API specification</a></li>
    </ul>
   </div>
  </body>
