heapmonj: backend and api spec; build updates (Gradle, Make, CMake); unit tests; documentation

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
    </p>
    <ul>
     <li><a href="https://github.com/dentonescu/cv-samples">cv-samples source code</a></li>
+    <li><a href="heapmonj/docs/api">heapmonj REST API specification</a></li>
     <li><a href="null-cipher">null-cipher</a>
     <li><a href="wifiequ/docs/api">WiFiEqu REST API specification</a></li>
    </ul>
