WiFiEqu Angular frontend; Docker compose includes WiFiEqu frontend; documentation; SSE in backend no longer pretty prints JSON

--- a/docker/index/index.html
+++ b/docker/index/index.html
@@ -108,25 +108,26 @@
       <article class="card">
         <p class="eyebrow">Frontend</p>
         <div class="links">
-          <a href="http://localhost:8084" target="_blank" rel="noreferrer noopener">Heapmonj UI (Angular)</a>
-          <a href="http://localhost:8081" target="_blank" rel="noreferrer noopener">Slideshow server</a>
+          <a href="http://localhost:8082" target="_blank" rel="noreferrer noopener">Heapmonj UI (Angular)</a>
+          <a href="http://localhost:8085" target="_blank" rel="noreferrer noopener">WiFiEqu UI (Angular)</a>
+          <a href="http://localhost:8083" target="_blank" rel="noreferrer noopener">Slideshow server</a>
         </div>
       </article>
 
       <article class="card">
         <p class="eyebrow">Heapmonj backend</p>
         <div class="links">
-          <a href="http://localhost:8083/api/v1/heap/current" target="_blank" rel="noreferrer noopener">/api/v1/heap/current</a>
-          <a href="http://localhost:8083/api/v1/heap/history" target="_blank" rel="noreferrer noopener">/api/v1/heap/history</a>
+          <a href="http://localhost:8081/api/v1/heap/current" target="_blank" rel="noreferrer noopener">/api/v1/heap/current</a>
+          <a href="http://localhost:8081/api/v1/heap/history" target="_blank" rel="noreferrer noopener">/api/v1/heap/history</a>
         </div>
       </article>
 
       <article class="card">
         <p class="eyebrow">WiFiEqu backend</p>
         <div class="links">
-          <a href="http://localhost:8082/api/v1/channels" target="_blank" rel="noreferrer noopener">/api/v1/channels</a>
-          <a href="http://localhost:8082/api/v1/stats" target="_blank" rel="noreferrer noopener">/api/v1/stats</a>
-          <a href="http://localhost:8082/api/v1/channel/stream" target="_blank" rel="noreferrer noopener">/api/v1/channel/stream</a>
+          <a href="http://localhost:8084/api/v1/channels" target="_blank" rel="noreferrer noopener">/api/v1/channels</a>
+          <a href="http://localhost:8084/api/v1/stats" target="_blank" rel="noreferrer noopener">/api/v1/stats</a>
+          <a href="http://localhost:8084/api/v1/channels/stream" target="_blank" rel="noreferrer noopener">/api/v1/channels/stream</a>
         </div>
       </article>
     </div>
