--- a/docker/index/index.html
+++ b/docker/index/index.html
@@ -109,8 +109,11 @@
         <p class="eyebrow">Frontend</p>
         <div class="links">
           <a href="http://localhost:8082" target="_blank" rel="noreferrer noopener">Heapmonj UI (Angular)</a>
-          <a href="http://localhost:8085" target="_blank" rel="noreferrer noopener">WiFiEqu UI (Angular)</a>
-          <a href="http://localhost:8083" target="_blank" rel="noreferrer noopener">Slideshow server</a>
+          <a href="http://localhost:8083" target="_blank" rel="noreferrer noopener">Null Cipher (static)</a>
+          <a href="http://localhost:8084" target="_blank" rel="noreferrer noopener">pkixwebadm</a>
+          <a href="http://localhost:8085" target="_blank" rel="noreferrer noopener">Slideshow server</a>
+          <a href="http://localhost:8086" target="_blank" rel="noreferrer noopener">Triangle Peg Game (React)</a>
+          <a href="http://localhost:8088" target="_blank" rel="noreferrer noopener">WiFiEqu UI (Angular)</a>
         </div>
       </article>
 
@@ -125,9 +128,9 @@
       <article class="card">
         <p class="eyebrow">WiFiEqu backend</p>
         <div class="links">
-          <a href="http://localhost:8084/api/v1/channels" target="_blank" rel="noreferrer noopener">/api/v1/channels</a>
-          <a href="http://localhost:8084/api/v1/stats" target="_blank" rel="noreferrer noopener">/api/v1/stats</a>
-          <a href="http://localhost:8084/api/v1/channels/stream" target="_blank" rel="noreferrer noopener">/api/v1/channels/stream</a>
+          <a href="http://localhost:8087/api/v1/channels" target="_blank" rel="noreferrer noopener">/api/v1/channels</a>
+          <a href="http://localhost:8087/api/v1/stats" target="_blank" rel="noreferrer noopener">/api/v1/stats</a>
+          <a href="http://localhost:8087/api/v1/channels/stream" target="_blank" rel="noreferrer noopener">/api/v1/channels/stream</a>
         </div>
       </article>
     </div>
