triangle-peg-game-react: MVP finished, game playable; Vercel deploy for live preview active

--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
    <ul>
     <li><a href="https://github.com/dentonescu/cv-samples">cv-samples source code</a></li>
     <li><a href="heapmonj/docs/api">heapmonj REST API specification</a></li>
-    <li><a href="null-cipher">null-cipher</a>
+    <li><a href="null-cipher">null-cipher</a></li>
+    <li><a href="https://triangle-peg-game-react.vercel.app">triangle-peg-game-react</a></li>
     <li><a href="wifiequ/docs/api">WiFiEqu REST API specification</a></li>
    </ul>
   </div>
