pwa-llm-poc: PWA and Ollama POC

--- a/docker/index/index.html
+++ b/docker/index/index.html
@@ -111,9 +111,10 @@
           <a href="http://localhost:8082" target="_blank" rel="noreferrer noopener">Heapmonj UI (Angular)</a>
           <a href="http://localhost:8083" target="_blank" rel="noreferrer noopener">Null Cipher (static)</a>
           <a href="http://localhost:8084" target="_blank" rel="noreferrer noopener">pkixwebadm</a>
-          <a href="http://localhost:8085" target="_blank" rel="noreferrer noopener">Slideshow server</a>
-          <a href="http://localhost:8086" target="_blank" rel="noreferrer noopener">Triangle Peg Game (React)</a>
-          <a href="http://localhost:8088" target="_blank" rel="noreferrer noopener">WiFiEqu UI (Angular)</a>
+          <a href="http://localhost:8086" target="_blank" rel="noreferrer noopener">pwa-llm-poc</a>
+          <a href="http://localhost:8087" target="_blank" rel="noreferrer noopener">Slideshow server</a>
+          <a href="http://localhost:8088" target="_blank" rel="noreferrer noopener">Triangle Peg Game (React)</a>
+          <a href="http://localhost:8090" target="_blank" rel="noreferrer noopener">WiFiEqu UI (Angular)</a>
         </div>
       </article>
 
@@ -126,11 +127,19 @@
       </article>
 
       <article class="card">
+        <p class="eyebrow">pwa-llm-poc backend</p>
+        <div class="links">
+          <a href="http://localhost:8085/api/v1/generate" target="_blank" rel="noreferrer noopener">/api/v1/generate</a>
+        </div>
+        <p class="muted" style="margin:0;">Requires Ollama on the host at port 11434 with the Gemma3 model pulled.</p>
+      </article>
+
+      <article class="card">
         <p class="eyebrow">WiFiEqu backend</p>
         <div class="links">
-          <a href="http://localhost:8087/api/v1/channels" target="_blank" rel="noreferrer noopener">/api/v1/channels</a>
-          <a href="http://localhost:8087/api/v1/stats" target="_blank" rel="noreferrer noopener">/api/v1/stats</a>
-          <a href="http://localhost:8087/api/v1/channels/stream" target="_blank" rel="noreferrer noopener">/api/v1/channels/stream</a>
+          <a href="http://localhost:8089/api/v1/channels" target="_blank" rel="noreferrer noopener">/api/v1/channels</a>
+          <a href="http://localhost:8089/api/v1/stats" target="_blank" rel="noreferrer noopener">/api/v1/stats</a>
+          <a href="http://localhost:8089/api/v1/channels/stream" target="_blank" rel="noreferrer noopener">/api/v1/channels/stream</a>
         </div>
       </article>
     </div>
