--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
     <li><a href="https://github.com/dentonescu/cv-samples">cv-samples source code</a></li>
     <li><a href="heapmonj/docs/api">heapmonj REST API specification</a></li>
     <li><a href="null-cipher">null-cipher</a></li>
+    <li><a href="pwa-llm-poc/docs/api">pwa-llm-poc REST API specification</a></li>
     <li><a href="https://triangle-peg-game-react.vercel.app">triangle-peg-game-react</a></li>
     <li><a href="wifiequ/docs/api">WiFiEqu REST API specification</a></li>
    </ul>
